<resources>
    <string name="app_name">NewApp</string>
    <string name="actionhome">Home</string>
    <string name="actionbookcase">Book</string>
    <string name="actionschedule">Schedule</string>
    <string name="actiongenre">Genre</string>
    <string name="actionyour">Your</string>


    <string name="facebook_app_id">371892391732136</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="title_activity_upload_comic">UploadComic</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>