<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_home"
        android:title="@string/actionhome"
        android:icon="@drawable/ic_baseline_home_24"

        ></item>

    <item
        android:id="@+id/menu_bookcase"
        android:title="@string/actionbookcase"
        android:icon="@drawable/ic_outline_table_rows_24"

        ></item>
    <item
        android:id="@+id/menu_genre"
        android:title="@string/actiongenre"
        android:icon="@drawable/ic_outline_category_24"

        ></item>
    <item
        android:id="@+id/menu_schedule"
        android:title="@string/actionschedule"
        android:icon="@drawable/ic_outline_schedule_24"

        ></item>
    <item
        android:id="@+id/menu_your"
        android:title="@string/actionyour"
        android:icon="@drawable/ic_baseline_person_24"

        ></item>






</menu>